# March-Madness-Bracket-2026

./: .gitignore  generate_march_madness_dashboard.py  march_madness_model.py  tournament_backtest_diagnostics.py
TopStep Algorithm/: .gitignore  config.py  profiles.py
TopStep Algorithm/backtest/: config.py  dashboard.py  engine.py  run-backtest.py
TopStep Algorithm/data/: condition.json  manifest.json  metadata.json
TopStep Algorithm/execution/: broker.py  engine.py  order_manager.py  reconciler.py  scheduler.py  state_store.py  topstepx_adapter.py
TopStep Algorithm/features/: indicators.py
TopStep Algorithm/risk/: engine.py  execution_checks.py
TopStep Algorithm/scripts/: run_trader.py
TopStep Algorithm/strategy/: rules.py
TopStep Algorithm/tests/: test_execution.py
TopStep_Algorithm/: .gitignore  CLAUDE.md  config.py  profiles.py  pyproject.toml  requirements.txt
TopStep_Algorithm/api/: market_data.py
TopStep_Algorithm/backtest/: config.py  dashboard.py  data_loader.py  engine.py  eval_simulator.py  feature_importance.py  holidays.py  metrics.py  raw_setup_ledger.py  reporter.py  run-backtest.py  run_backtest.py  signal_ledger.py  simulator.py  walk_forward.py
TopStep_Algorithm/data_pipeline/: live_feed.py  loader.py  preprocess.py  sweep_live_feed.py
TopStep_Algorithm/docs/: handoff_order_role_bug_2026-05-01.md  signal_decision_pipeline.md  topstep_context_report.md
TopStep_Algorithm/execution/: broker.py  engine.py  logging.py  order_manager.py  projectx_adapter.py  reconciler.py  scheduler.py  state_store.py  topstep_live_adapter.py  topstepx_adapter.py
TopStep_Algorithm/features/: __init__.py  indicators.py
TopStep_Algorithm/models/: __init__.py  instruments.py  orders.py
TopStep_Algorithm/risk/: engine.py  execution_checks.py
TopStep_Algorithm/scripts/: cancel_open_orders.py  check_connection.py  flatten_open_positions.py  probe_market_data.py  run_trader.py  verify_runtime_instruments.py
TopStep_Algorithm/src/trading_system/: config.py  profiles.py
TopStep_Algorithm/src/trading_system/api/: market_data.py
TopStep_Algorithm/src/trading_system/backtest/: dashboard.py  data_loader.py  engine.py  eval_simulator.py  feature_importance.py  holidays.py  metrics.py  raw_setup_ledger.py  reporter.py  run_backtest.py  signal_ledger.py  simulator.py  walk_forward.py
TopStep_Algorithm/src/trading_system/data_pipeline/: live_feed.py  preprocess.py  sweep_live_feed.py
TopStep_Algorithm/src/trading_system/execution/: broker.py  engine.py  logging.py  order_manager.py  projectx_adapter.py  reconciler.py  scheduler.py  state_store.py  topstep_live_adapter.py  topstepx_adapter.py
TopStep_Algorithm/src/trading_system/features/: indicators.py
TopStep_Algorithm/src/trading_system/risk/: engine.py  execution_checks.py
TopStep_Algorithm/src/trading_system/strategy/: asian_range.py  confluence.py  intent_bridge.py  rules.py  signal.py  sweep_detector.py
TopStep_Algorithm/strategy/: asian_range.py  confluence.py  diagnostics.py  intent_bridge.py  rules.py  signal.py  sweep_detector.py
TopStep_Algorithm/tests/: test_execution.py  test_gaps_1_4.py  test_intent_bridge.py  test_ml_diagnostics.py  test_strategy_diagnostics.py  test_walk_forward_p1.py
TopStep_Algorithm/tests/unit/: test_imports.py
output/march_madness/: boosting_distribution.csv  boosting_feature_importance.csv  boosting_importance_stability.csv  boosting_model_comparison.csv  boosting_reliability.csv  boosting_rolling_comparison.csv  boosting_stability_runs.csv  boosting_stability_runtime.json  boosting_stability_summary.csv  boosting_stability_verdict.csv  bracket_2026.csv  calibration_choice.json  calibration_metrics.csv  calibration_reliability.csv  dashboard_2026.html  dataset_performance_comparison.csv  ensemble_distribution.csv  ensemble_metrics.csv  ensemble_reliability.csv  feature_set_comparison.csv  feature_set_reliability.csv  medium_gap_refinement_comparison.csv  medium_gap_refinement_decision.json  medium_gap_refinement_metrics.csv  medium_gap_refinement_yearly.csv  model_backtest.csv  model_comparison.csv  model_score_component_weights.csv  regular_season_games_2026.csv  regular_season_ingestion_summary.json  regular_season_matchups_2026.csv  seed_shrinkage_analysis.csv  team_strengths_2026.csv  (+13 more)
